--- a/back/package.json
+++ b/back/package.json
@@ -8,8 +8,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.2",
+    "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.7.3",
+    "path": "^0.12.7",
     "sequelize": "^6.13.0",
     "sqlite3": "^5.0.2"
   },
